# rust-fr-arbitrage

./: Cargo.toml  README.md
src/: hyperliquid.rs  main.rs  master_caller.rs  synthetix.rs
src/abi/: PerpsAccountProxy.json  PerpsMarketProxy.json  PythERC7412Wrapper.json
src/api/: hyperliquid.rs  mod.rs  synthetix.rs
