[package]
name = "rust-fr-arb"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethers = { version = "1.0", features = ["rustls", "abigen"] }
polars = { version = "0.20.0", features = ["lazy"] }
tabled = "0.4.0"